# mlx-openai-server

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  TEMP_PROJECT_STEPS.md  configure_mlx.sh  pyproject.toml  setup.py
.github/: dependabot.yml
app/: __init__.py  cli.py  config.py  const.py  main.py  server.py  version.py
docs/: FUSION_PHASE0.md  HANDOFFS.md  HUB_LIFECYCLE_MAPPING.md  HUB_MODE.md  HUB_OBSERVABILITY.md  PROMPT_CACHE_ARCHITECTURE.md
examples/: audio_examples.ipynb  config.yaml  embedding_examples.ipynb  image_edit.ipynb  lm_embeddings_examples.ipynb  responses_api.ipynb  simple_rag_demo.ipynb  structured_outputs_examples.ipynb  vision_examples.ipynb  vlm_embeddings_examples.ipynb
logs/: markdown_export.md
scripts/: gptoss_tool_calling_tests.py  llm_health_dashboard.py  stop-mlx.sh  test_llm_contracts.py
templates/: hub_status.html  hub_status.html.jinja
tests/: __init__.py  conftest.py  test_api_hub_routing.py  test_api_hub_status.py  test_base_tool_parser.py  test_batch_scheduler.py  test_central_idle_controller.py  test_chat_completions_defaults.py  test_chat_completions_prompt_history.py  test_cli_hub_actions.py  test_cli_hub_status.py  test_cli_launch.py  test_cli_sampling_defaults_parity.py  test_config.py  test_control_plane.py  test_core_hub_status.py  test_endpoints_models.py  test_endpoints_streaming.py  test_handler_process_startup_timeout.py  test_health_endpoint.py  test_hub_config.py  test_hub_controller.py  test_hub_daemon.py  test_hub_daemon_api.py  test_hub_daemon_routes.py  test_hub_integration.py  (+21 more)
(+116 files in other folders)
